On branch 0/build/1/osx - tried to resolve 'illegal local variable table', resorted to '-Xverify:none' 	modified:   build.xml